--- a/ppd/.gitignore
+++ b/ppd/.gitignore
@@ -10,6 +10,11 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+package.json 
+package-lock.json
+eslint.config.js
+vite.config.js
+
 *.local
 
 # Editor directories and files
