--- a/ppd/package.json
+++ b/ppd/package.json
@@ -1,25 +1,25 @@
 
+
+
 {
-  "name": "ppd-project",
-   "private": true,
+  "name": "ppd",
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "cd ppd/ppd && vite",
-    "build": "cd ppd/ppd && vite build",
-     "lint": "eslint .",
-    "preview": "cd ppd/ppd && vite preview"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
-    "tailwindcss": "^4.1.17",
-    "vite": "^7.2.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "tailwindcss": "^4.1.17"
   },
-
-   "devDependencies": {
+  "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -31,16 +31,3 @@
     "vite": "^7.2.4"
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
